# sigma_api

./: README.md
include/sigma/math/testing/: CMakeLists.txt
include/sigma/math/testing/src/: basic_vectorspace_test.cpp  cartesian_space_test.cpp  main.cpp
include/sigma/math/vectorspace/: basic_vectorspace.hpp  cartesian_space.hpp
include/sigma/meta/algorithm/: transform.hpp
include/sigma/meta/container/: traits.hpp  vector.hpp
include/sigma/meta/testing/: CMakeLists.txt
include/sigma/meta/testing/src/: container_test.hpp  main.cpp
