#	SETUP
CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT(sigma_api_math)

#	SOURCE FILES

FILE(GLOB source_files "src/*.cpp")

#	FLAGS

SET(CMAKE_CXX_FLAGS 
	"-std=c++1z -O0 -fno-rtti -fno-exceptions -Wall -pedantic")


# OUTPUT BINARY

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

#	PACKAGES

FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

#	INCLUDE DIRECTORIES

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/../../../")

#	BUILD EXECUTABLE

ADD_EXECUTABLE(sigma_api_math ${source_files})

#	LINK LIBRARIES

TARGET_LINK_LIBRARIES(sigma_api_math ${GTEST_BOTH_LIBRARIES})
TARGET_LINK_LIBRARIES(sigma_api_math ${CMAKE_THREAD_LIBS_INIT})